<resources>
    <string name="ok">OK</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="today">Today</string>
    <string name="no_data">No data</string>
    <string name="log_in">Log in</string>
    <string name="your_content_anytime">Your content \n anytime, \n anywhere!</string>
    <string name="enter_now">Enter now to watch your \n favorite movies and TV shows.</string>
    <string name="register">Register</string>
    <string name="create_your_account">Create your account and enjoy.</string>
    <string name="username">USERNAME</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="pin">PIN</string>
    <string name="purchase_pin">PURCHASE PIN</string>
    <string name="already_have_account">Already registered? &lt;u>Log in here&lt;/u></string>
    <string name="gender">GENDER</string>
    <string name="enter_credentials">Please, enter your credentials to continue.</string>
    <string name="email">E-MAIL</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_password">Forgot my password</string>
    <string name="enter_email_to_reset_password">Please type in you e-mail address to reset your password:</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="proceed">Continue</string>
    <string name="welcome_to">Welcome to %1$s</string>
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="trending">Trending</string>
    <string name="live_tv">Live TV</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="account">Account</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="recommended">Recommended</string>
    <string name="genres">Genres</string>
    <string name="recently_added">Recently Added</string>
    <string name="favorite_channels">Favorite channels</string>
    <string name="all_channels">All channels</string>
    <string name="channel_categories">Channel categories</string>
    <string name="top_channels">Top Channels</string>
    <string name="top_movies">Top Movies</string>
    <string name="top_tv_shows">Top TV Shows</string>
    <string name="advertisement">Advertisement</string>
    <string name="are_you_sure_log_out">Are you sure you want \n to log out?</string>
    <string name="are_you_sure_exit">Are you sure you want \n to exit?</string>
    <string name="watch_live">Watch live</string>
    <string name="tv_guide">TV guide</string>
    <string name="load_more">Load more</string>
    <string name="rent_this_channel">Rent this channel</string>
    <string name="rent_for_with_days">Name: %1$s \nPrice: %2$s \nDuration in days: %3$s</string>
    <string name="description">Description</string>
    <string name="options">Options</string>
    <string name="reminder">Reminder</string>
    <string name="favorite">Favorite</string>
    <string name="timeshift">Timeshift</string>
    <string name="cast">Cast:&#160;</string>
    <string name="director">Director:&#160;</string>
    <string name="rent">Rent</string>
    <string name="trailer">Trailer</string>
    <string name="rate">Rate</string>
    <string name="play">Play</string>
    <string name="rate_this_title">Rate this title</string>
    <string name="imdb_rating">&#160;| %1$s/10</string>
    <string name="resolution">Resolution</string>
    <string name="duration">Duration</string>
    <string name="confirm_purchase">Confirm purchase</string>
    <string name="video_profiles">Video Profiles</string>
    <string name="audio_profiles">Audio Profiles</string>
    <string name="subtitles">Subtitles</string>
    <string name="retry">Retry</string>
    <string name="parental_rating">Parental\nrating</string>
    <string name="next_episode">Next episode in %1$d</string>
    <string name="start_over">Start Over</string>
    <string name="resume">Resume</string>
    <string name="start_from_beginning_or_resume">Start from the beginning or \nresume where you left?</string>
    <string name="seasons_count">%1$d&#160;Season(s)</string>
    <string name="season_number">Season %1$d</string>
    <string name="estimation_available_date">Estimated available date(s)</string>
    <string name="country">COUNTRY</string>
    <string name="city">CITY</string>
    <string name="membership">MEMBERSHIP</string>
    <string name="language">LANGUAGE</string>
    <string name="english">English</string>
    <string name="spanish">Español</string>
    <string name="brazilian">Brasileño</string>
    <string name="video_quality">VIDEO QUALITY</string>
    <string name="buffer">BUFFER</string>
    <string name="debug">DEBUG</string>
    <string name="time_format">24h Time Format</string>
    <string name="unlimited">Unlimited</string>
    <string name="valid_until">Valid until %1$s</string>
    <string name="expired_on">Expired on %1$s</string>
    <string name="log_out">Log Out</string>
    <string name="right_to_left">RIGHT TO LEFT</string>
    <string name="theme">NIGHT MODE</string>
    <string name="age">AGE</string>
    <string name="membership_title">Membership</string>
    <string name="current_profile">CURRENT PROFILE</string>
    <string name="expire_date">EXPIRE DATE</string>
    <string name="expired">Expired</string>
    <string name="payment_history">Payment history</string>
    <string name="edit_info">Edit Info</string>
    <string name="confirm_the_changes">Confirm the changes by clicking on the top right button</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="current_password">CURRENT PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="enter_new_password">Please enter new password</string>
    <string name="confirm_new_password">Please confirm your new password</string>
    <string name="passwords_not_match">New password and confirm password must be the same</string>
    <string name="language_title">Language</string>
    <string name="select_a_language">Select a language</string>
    <string name="select_default_languages">Select a default language for the app</string>
    <string name="video_quality_title">Video Quality</string>
    <string name="select_default_quality">Select default quality for the videos</string>
    <string name="buffer_title">Buffer</string>
    <string name="buffer_live_tv">Set buffer time for Live TV</string>
    <string name="buffer_vod">Set buffer time for Movies</string>
    <string name="buffer_size_live_tv">Buffer time for Live TV -&#160;%1$d</string>
    <string name="buffer_size_movies">Buffer time for Movies -&#160;%1$d</string>
    <string name="maximum_time_video_will_be_buffered">The maximum time your video will buffer ahead</string>
    <string name="filter_your_search">Filter your search</string>
    <string name="message_account_created">Your account is created, enjoy</string>
    <string name="message_password_reset_successful">Password reset successful. Please check your email</string>
    <string name="message_calendar_permission_denied">Permission denied, you wont be able to add reminders</string>
    <string name="message_content_not_available">Content unavailable</string>
    <string name="message_trending_empty">We’re collecting data to show \n you top trending channels, \n movies and TV shows</string>
    <string name="message_channel_empty">We’re unable to show you results for (filter)</string>
    <string name="message_vod_empty">We’re collecting data to \n show you the best content</string>
    <string name="message_vod_by_genre_empty">There are no movies \n for selected genre</string>
    <string name="message_tv_show_empty">We’re collecting data to \n show you the best content</string>
    <string name="message_tv_show_by_genre_empty">There are no TV shows \n for selected genre</string>
    <string name="message_insert_pin">To enter this content please insert your PIN</string>
    <string name="message_insert_purchase_pin">To buy this content please insert your Purchase PIN</string>
    <string name="message_wrong_pin">Wrong PIN. Please try again!</string>
    <string name="message_select_profile_for_rent">Please select profile to continue purchase</string>
    <string name="message_select_pricing_for_rent">Please select pricing to continue purchase</string>
    <string name="message_content_will_be_available">Movie will be available for watching on&#160;</string>
    <string name="message_content_rented">%1s rented successful</string>
    <string name="message_select_profile">Please select profile</string>
    <string name="message_content_rated">Content rated successfully</string>
    <string name="message_profile_updated">Profile info updated successful</string>
    <string name="message_swipe_left_right">Swipe left/right to switch channels</string>
    <string name="message_catchup_not_supported">Catchup not supported for selected time</string>
    <string name="message_no_programmes">Uh oh! \n No programmes for selected day</string>
    <string name="message_reminder_added">Reminder added successfully</string>
    <string name="message_reminder_removed">Reminder removed successfully</string>
    <string name="message_reminder_updated">Reminder activation time updated successfully</string>
    <string name="message_you_are_not_subscribed">List is empty for one of following reasons:</string>
    <string name="message_you_are_not_subscribed_reasons">- You are not subscribed to our service \n- Your subscription has expired \n- You don\'t have any favorite channels</string>
    <string name="message_timeshift_length">Please select timeshift length</string>
    <string name="message_subscription_renewal">*If your subscription has expired, please contact your administrator or visit WEB TV Application</string>
    <string name="error_email_can_not_be_empty">Email/Username filed can not be empty</string>
    <string name="error_password_can_not_be_empty">Password filed can not be empty</string>
    <string name="error_password_min_length">Min password length is %1$d</string>
    <string name="error_malformed_json">Oops! We hit an error. Try again later</string>
    <string name="error_timeout">Oooops! We could not capture your request in time. Please try again</string>
    <string name="error_no_internet_connection">Please check your internet connection</string>
    <string name="error_unknown">Something went wrong!</string>
    <string name="error_token_expired">Token expired, please log in again</string>
    <string name="error_subscription_expired">Subscription expired or not valid</string>
    <string name="error_playing">Uh oh! \n Something went wrong. \n Try again</string>
    <string name="search">Search</string>
    <string name="search_result">No search result found</string>
    <string name="search_result_for">Search result for \"%1$s\"</string>
    <string name="undefined_option">Undefined</string>
    <string name="add_Off_line">Off</string>
    <string-array name="filter">
        <item>Sort by Name</item>
        <item>Name: A - Z</item>
        <item>Name: Z - A</item>
    </string-array>
</resources>