<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.wecast.mobile.ui.screen.registration.RegistrationActivityViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back"
            style="@style/CustomBackButton.Black"
            android:layout_marginTop="@dimen/status_bar_height"
            android:contentDescription="@string/app_name" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/back"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingStart="@dimen/standard_double"
                android:paddingEnd="@dimen/standard_double">

                <TextView
                    style="@style/TextView.Title.Big.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/standard"
                    android:text="@string/register"
                    android:textAllCaps="true" />

                <TextView
                    style="@style/TextView.Title.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/standard"
                    android:gravity="center"
                    android:text="@string/create_your_account" />

                <EditText
                    android:id="@+id/username"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/first_name"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/last_name"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/email"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/password"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/age"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:maxLength="3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <EditText
                        android:id="@+id/pin"
                        style="@style/CustomEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/standard_half"
                        android:layout_marginBottom="@dimen/standard_half"
                        android:layout_weight="50"
                        android:hint="@string/pin"
                        android:inputType="numberPassword"
                        android:maxLength="4" />

                    <EditText
                        android:id="@+id/purchase_pin"
                        style="@style/CustomEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/standard_half"
                        android:layout_weight="50"
                        android:hint="@string/purchase_pin"
                        android:inputType="numberPassword"
                        android:maxLength="5" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <Spinner
                        android:id="@+id/subscription"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/standard_half"
                        android:layout_weight="50" />

                    <Spinner
                        android:id="@+id/gender"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50" />

                </LinearLayout>

                <Button
                    android:id="@+id/register"
                    style="@style/CustomButtonOval"
                    android:layout_width="@dimen/login_logo_width"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_double"
                    android:text="@string/proceed" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</layout>