<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="isFavorite"
            type="Boolean" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/standard"
        android:weightSum="100">

        <Button
            android:id="@+id/play"
            style="@style/ComponentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_half"
            android:layout_weight="25"
            android:alpha="0.3"
            android:drawableTop="@drawable/ic_go_channel"
            android:enabled="false"
            android:text="@string/play" />

        <Button
            android:id="@+id/reminder"
            style="@style/ComponentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_half"
            android:layout_weight="25"
            android:alpha="0.3"
            android:drawableTop="@drawable/ic_reminder_off"
            android:enabled="false"
            android:text="@string/reminder" />

        <Button
            android:id="@+id/addFavorite"
            style="@style/ComponentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_half"
            android:layout_weight="25"
            android:drawableTop="@drawable/ic_favorite_off"
            android:text="@string/favorite"
            android:visibility="@{isFavorite ? View.GONE : View.VISIBLE, default=gone}" />

        <Button
            android:id="@+id/removeFavorite"
            style="@style/ComponentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_half"
            android:layout_weight="25"
            android:drawableTop="@drawable/ic_favorite_on"
            android:text="@string/favorite"
            android:visibility="@{isFavorite ? View.VISIBLE : View.GONE, default=gone}" />

        <Button
            android:id="@+id/timeShift"
            style="@style/ComponentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_half"
            android:layout_weight="25"
            android:alpha="0.3"
            android:drawableTop="@drawable/ic_timeshift_selector"
            android:enabled="false"
            android:text="@string/timeshift" />

    </LinearLayout>

</layout>