<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        style="@style/CustomCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="?attr/colorBackground"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/standard">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/dialog_logo_width"
                android:layout_height="@dimen/dialog_logo_height"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/title"
                style="@style/TextView.Title.Big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/standard_double"
                android:gravity="center"
                android:text="@string/are_you_sure_exit"
                android:textSize="@dimen/title_small" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/standard_double"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel"
                    style="@style/CustomDialogButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="?attr/colorTextInactive" />

                <Button
                    android:id="@+id/confirm"
                    style="@style/CustomDialogButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard_half"
                    android:text="@string/confirm" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>