<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        style="@style/CustomCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/standard">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/standard_half"
                android:layout_marginBottom="@dimen/standard"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_mood_bad" />

            <TextView
                android:id="@+id/title"
                style="@style/TextView.Title.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/standard"
                android:gravity="center"
                android:text="@string/error_playing" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/standard"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel"
                    style="@style/CustomDialogButton"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/cancel"
                    android:textColor="?attr/colorTextInactive" />

                <Button
                    android:id="@+id/retry"
                    style="@style/CustomDialogButton"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/standard_half"
                    android:text="@string/retry" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>
